@@ -1,3 +1,8 @@
+Wed Jul  6 12:18:09 2011  Shota Fukumori  <sorah@tubusu.net>
+
+	* test/cgi/test_cgi_header.rb(test_cgi_header_nph): Fix bug depends to
+	  time. The test fails if time past 1 second in line 136-145
+
 Tue Jul  5 15:28:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (parser_here_document): should dispatch heredoc_end
